[package]
name = "gtk3_rust"
version = "0.1.0"
authors = ["oleg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gtk= {git = "https://github.com/gtk-rs/gtk.git", features=["v3_16"]}
gdk= {git = "https://github.com/gtk-rs/gdk.git"}
